Segundo commit, terminando las paginas y agregando estilo, imagenes y videos

--- a/src/main/resources/static/equipo.html
+++ b/src/main/resources/static/equipo.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+Practica #2 Alejandro Espinoza
 -->
 <html>
     <head>
-        <title>Equipo</title>
+        <title>Mundo Animal - Equipo</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
@@ -20,22 +19,40 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <li class='nav-menu-item'><a class='nav-link enlace' href="perros.html">Perros</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="gatos.html">Gatos</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="blog.html">Blog</a></li>
-                    <li class='nav-menu-item'><a class='nav-link enlace' href="contactos.html">Contacto</a></li>
+                    <li class='nav-menu-item'><a class='nav-link enlace' href="contacto.html">Contacto</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="urgencias.html">Urgencias</a></li>
                 </ul>
             </nav>
         </header>
         <aside>
-            <h1 style='text-align: center; background-color: blue; color: white;'>Home</h1>
-            <h2>Etiquetas básicas</h2>
+            <h1 style='text-align: center; background-color: blue; color: white;'>Nuestro Equipo</h1>
+            <h2>Conoce al equipo que cuidara a tu mascota</h2>
         </aside>
         <section>
-            <p>Esta <b>es el primer párrafo</b> de prueba...</p>
-            <p>Esta <i>es el segundo párrafo</i> de prueba...</p>
-            <p>Esta <u>es la tercer párrafo</u> de prueba...</p>
+            <h2>Equipo Veterinario</h2>
+            <p>En MundoMascotas contamos con un equipo altamente capacitado.</p>
+
+            <h2>Conoce a nuestro equipo</h2>
+            <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+                <div>
+                    <h3>Dr. Juan Pérez</h3>
+                    <img src="https://img.freepik.com/fotos-premium/veterinario-masculino-com-cachorro_488220-28856.jpg?w=360" alt="Dr. Juan Pérez - Veterinario" width="300" style="margin-bottom: 10px;">
+                    <p>Especialista en medicina interna y cirugía.</p>
+                </div>
+                <div>
+                    <h3>Dra. María López</h3>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSkASywMV3avFQJcjvUbPkpfM7T-qrpbw8s0J6izmjUxxxPR-QNv_un2lQeax-f8z4InU&usqp=CAU" alt="Dra. María López - Veterinaria" width="300" style="margin-bottom: 10px;">
+                    <p>Especialista en dermatología y nutrición animal.</p>
+                </div>
+                <div>
+                    <h3>Video promocional</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Rr4enxLRDgA?si=BfD_JWSBx_beprut" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p>Te esperamos!</p>
+                </div>
+            </div>
         </section>
         <footer>
-            TechShop 2025, Todos los derechos reservados. &COPY;
+            Mundo Animal 2025, Todos los derechos reservados. &COPY;
         </footer>
     </body>
 </html>
