--- a/src/main/resources/static/gatos.html
+++ b/src/main/resources/static/gatos.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+Practica #2 Alejandro Espinoza
 -->
 <html>
     <head>
-        <title>Gatos</title>
+        <title>Mundo Animal - Gatos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
@@ -20,22 +19,37 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <li class='nav-menu-item'><a class='nav-link enlace' href="equipo.html">Equipo</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="perros.html">Perros</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="blog.html">Blog</a></li>
-                    <li class='nav-menu-item'><a class='nav-link enlace' href="contactos.html">Contacto</a></li>
+                    <li class='nav-menu-item'><a class='nav-link enlace' href="contacto.html">Contacto</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="urgencias.html">Urgencias</a></li>
                 </ul>
             </nav>
         </header>
         <aside>
-            <h1 style='text-align: center; background-color: blue; color: white;'>Home</h1>
-            <h2>Etiquetas básicas</h2>
+            <h1 style='text-align: center; background-color: blue; color: white;'>Gatos</h1>
+            <h2>Todo sobre el cuidado felino</h2>
         </aside>
         <section>
-            <p>Esta <b>es el primer párrafo</b> de prueba...</p>
-            <p>Esta <i>es el segundo párrafo</i> de prueba...</p>
-            <p>Esta <u>es la tercer párrafo</u> de prueba...</p>
+            <h2>Información sobre Gatos</h2>
+            <p>Los gatos son mascotas independientes, cariñosas y llenas de curiosidad. En MundoMascotas ofrecemos cuidados especializados para ellos.</p>
+
+            <h2>Galería de Gatos</h2>
+            <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+                <div>
+                    <h3>Consulta Felina</h3>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTByKwoP_941iuwkf5wKSVEfnphfpnOY-Qh8Q&s" alt="Consulta Felina" width="300" style="margin-bottom: 10px;">
+                </div>
+                <div>
+                    <h3>Vacunación</h3>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7WHBdmSU8hQZ2MGMAiqIUgqcXN8CPgHZ_FA&s" alt="Vacunación para Gatos" width="300" style="margin-bottom: 10px;">
+                </div>
+                <div>
+                    <h3>Video promocional</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GfXGYDgTasQ?si=0V8omQMzSiEMsUec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
         </section>
         <footer>
-            TechShop 2025, Todos los derechos reservados. &COPY;
+            Mundo Animal 2025, Todos los derechos reservados. &COPY;
         </footer>
     </body>
 </html>
