--- a/src/main/resources/static/servicios.html
+++ b/src/main/resources/static/servicios.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+Practica #2 Alejandro Espinoza
 -->
 <html>
     <head>
-        <title>Servicios</title>
+        <title>Mundo Animal - Servicios</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
@@ -20,22 +19,60 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <li class='nav-menu-item'><a class='nav-link enlace' href="perros.html">Perros</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="gatos.html">Gatos</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="blog.html">Blog</a></li>
-                    <li class='nav-menu-item'><a class='nav-link enlace' href="contactos.html">Contacto</a></li>
+                    <li class='nav-menu-item'><a class='nav-link enlace' href="contacto.html">Contacto</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="urgencias.html">Urgencias</a></li>
                 </ul>
             </nav>
         </header>
         <aside>
-            <h1 style='text-align: center; background-color: blue; color: white;'>Home</h1>
-            <h2>Etiquetas básicas</h2>
+            <h1 style='text-align: center; background-color: blue; color: white;'>Nuestros Servicios</h1>
+            <h2>Cuidamos a tu mascota con amor</h2>
+        </aside>
+        <aside>
+            <h1 style='text-align: center; background-color: blue; color: white;'>Nuestros Servicios</h1>
+            <h2>Cuidamos a tu mascota con amor</h2>
         </aside>
         <section>
-            <p>Esta <b>es el primer párrafo</b> de prueba...</p>
-            <p>Esta <i>es el segundo párrafo</i> de prueba...</p>
-            <p>Esta <u>es la tercer párrafo</u> de prueba...</p>
+            <h2>Servicios Veterinarios</h2>
+            <ul>
+                <li><b>Consulta General:</b> Diagnóstico y revisión médica completa.</li>
+                <li><b>Vacunación:</b> Aplicación de vacunas esenciales.</li>
+                <li><b>Cirugías:</b> Procedimientos quirúrgicos con equipos de última tecnología.</li>
+                <li><b>Desparasitación:</b> Prevención y tratamiento de parásitos.</li>
+                <li><b>Estética y Baño:</b> Corte de pelo, baño y limpieza especializada.</li>
+                <li><b>Urgencias 24/7:</b> Atención inmediata para emergencias.</li>
+            </ul>
+
+            <h2>Galería de Servicios</h2>
+            <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+                <div>
+                    <h3>Consulta Veterinaria</h3>
+                    <img src="images/consulta.jpg" alt="Consulta Veterinaria" width="300" style="margin-bottom: 10px;">
+                </div>
+                <div>
+                    <h3>Vacunación</h3>
+                    <img src="images/vacunacion.jpg" alt="Vacunación" width="300" style="margin-bottom: 10px;">
+                </div>
+                <div>
+                    <h3>Cirugía</h3>
+                    <img src="images/cirugia.jpg" alt="Cirugía" width="300" style="margin-bottom: 10px;">
+                </div>
+                <div>
+                    <h3>Desparasitación</h3>
+                    <img src="images/desparacitacion.jpg" alt="Desparasitación" width="300" style="margin-bottom: 10px;">
+                </div>
+                <div>
+                    <h3>Estética y Baño</h3>
+                    <img src="images/bano.jpg" alt="Estética y Baño" width="300" style="margin-bottom: 10px;">
+                </div>
+                <div>
+                    <h3>Urgencias 24/7</h3>
+                    <img src="images/urgencias.jpg" alt="Urgencias 24/7" width="300" style="margin-bottom: 10px;">
+                </div>
+            </div>
         </section>
         <footer>
-            TechShop 2025, Todos los derechos reservados. &COPY;
+            Mundo Animal 2025, Todos los derechos reservados. &COPY;
         </footer>
     </body>
 </html>
