--- a/src/main/resources/static/urgencias.html
+++ b/src/main/resources/static/urgencias.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+Practica #2 Alejandro Espinoza
 -->
 <html>
     <head>
-        <title>Urgencias</title>
+        <title>Mundo Animal - Urgencias</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
@@ -21,7 +20,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <li class='nav-menu-item'><a class='nav-link enlace' href="perros.html">Perros</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="gatos.html">Gatos</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="blog.html">Blog</a></li>
-                    <li class='nav-menu-item'><a class='nav-link enlace' href="contactos.html">Contacto</a></li>
+                    <li class='nav-menu-item'><a class='nav-link enlace' href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
@@ -29,13 +28,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <h1 style='text-align: center; background-color: blue; color: white;'>Home</h1>
             <h2>Etiquetas básicas</h2>
         </aside>
+        <aside>
+            <h1 style='text-align: center; background-color: blue; color: white;'>Urgencias</h1>
+            <h2>¿Qué hacer en caso de emergencia?</h2>
+        </aside>
         <section>
-            <p>Esta <b>es el primer párrafo</b> de prueba...</p>
-            <p>Esta <i>es el segundo párrafo</i> de prueba...</p>
-            <p>Esta <u>es la tercer párrafo</u> de prueba...</p>
+            <h2>Primeros Auxilios para Mascotas</h2>
+            <p>Si tu mascota está en peligro, sigue estos pasos y contacta a un veterinario de inmediato.</p>
+
+            <h3>Cómo realizar RCP a un perro o gato</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Qxfoy8fH1Tc?si=5tc7yUgpWX5piSaB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h3>Cómo detener una hemorragia</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nTsLbd3F41w?si=QTVlTIBbXIdm4L2i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h3>Qué hacer si tu mascota se intoxica</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/o3DeNzjO8Qs?si=579M7HniTTKWDXLL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <footer>
-            TechShop 2025, Todos los derechos reservados. &COPY;
+            Mundo Animal 2025, Todos los derechos reservados. &COPY;
         </footer>
     </body>
 </html>
