--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,10 @@
 <!--
 Practica#2 Alejandro Espinoza
 -->
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Mundo animal</title>
+        <title>MundoMascotas - Veterinaria</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
@@ -12,29 +13,43 @@ Practica#2 Alejandro Espinoza
     <body>
         <header>
             <nav>
-                <a class='nav-link logo' href="index.html"> Mundo animal </a>
+                <a class='nav-link logo' href="index.html"> MundoMascotas </a>
                 <ul class='nav-menu'>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="servicios.html">Servicios</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="equipo.html">Equipo</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="perros.html">Perros</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="gatos.html">Gatos</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="blog.html">Blog</a></li>
-                    <li class='nav-menu-item'><a class='nav-link enlace' href="contactos.html">Contacto</a></li>
+                    <li class='nav-menu-item'><a class='nav-link enlace' href="contacto.html">Contacto</a></li>
                     <li class='nav-menu-item'><a class='nav-link enlace' href="urgencias.html">Urgencias</a></li>
                 </ul>
             </nav>
         </header>
         <aside>
-            <h1 style='text-align: center; background-color: blue; color: white;'>Home</h1>
-            <h2>Etiquetas básicas</h2>
+            <h1 style='text-align: center; background-color: blue; color: white;'>Bienvenidos</h1>
+            <h2>Tu veterinaria de confianza</h2>
         </aside>
         <section>
-            <p>Esta <b>es el primer párrafo</b> de prueba...</p>
-            <p>Esta <i>es el segundo párrafo</i> de prueba...</p>
-            <p>Esta <u>es la tercer párrafo</u> de prueba...</p>
+            <h2>Sobre Nosotros</h2>
+            <p>En <b>MundoMascotas</b>, nos preocupamos por el bienestar de tu mascota. Contamos con un equipo profesional y los mejores servicios veterinarios.</p>
+            <p>Brindamos atención a <i>perros, gatos y otras mascotas</i> con amor y compromiso.</p>
+
+            <h2>Nuestros Servicios</h2>
+            <ul>
+                <li>Consultas médicas</li>
+                <li>Vacunación</li>
+                <li>Cirugías</li>
+                <li>Estética y baño</li>
+                <li>Urgencias 24/7</li>
+            </ul>
+
+            <h2>Video Institucional</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/X_T817ZyZR0?si=WnUpTw8iYYJWZFkW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2>Ubicación</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48573.42188262135!2d-3.7774593272277017!3d40.45670319094762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4229b270fef18f%3A0xb2718d6b17d5d7e9!2sCl%C3%ADnica%20Veterinaria%20Mundo%20Animal!5e0!3m2!1ses-419!2scr!4v1738930208901!5m2!1ses-419!2scr" width="600" height="450" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </section>
         <footer>
-            TechShop 2025, Todos los derechos reservados. &COPY;
+            Mundo Animal 2025, Todos los derechos reservados. &COPY;
         </footer>
     </body>
 </html>
